# Xi-Jin-Ping-Speech-Analysis

./: README.md  crawler.py  main.py  markov.py  pyproject.toml
analysis/: analysis.py  lda_model.ipynb  lda_model.py
corpus/: speeches.csv  speeches.json
