[project]
name = "xijinpin-talks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cssselect>=1.4.0",
    "hanzinlp>=0.1.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "ruff>=0.14.10",
]
